[package]
name = "image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "iprocess"
path = "lib/lib.rs"

[[bin]]
name = "processor"
path = "src/main.rs"

[dependencies]
ash = { version = "0.37.2", features=["linked", "debug"]}
gpu-allocator = "0.22.0"
indoc = "2.0.1"
log = "0.4.19"
ndarray = "0.15.6"
shaderc = "0.8.2"
